namespace WotWeEat.Domain.Enum;

public enum ReasonNotChosen
{
    NotToday,
    TooMuchWork,
    TooUnhealthy,
    Other
}