namespace WotWeEat.Domain.Enum;

public enum AmountOfWork
{
    PieceOfCake = 0,
    Average = 1,
    LotOfWork = 2
}