namespace WotWeEat.Domain.Enum;

public enum Healthy
{
    Healthy = 0,
    Average = 1,
    Unhealthy = 2
}