namespace WotWeEat.Domain.Enum;

public enum MealBase
{
    Potato = 0,
    Pasta = 1,
    Dough = 2,
    Rice = 3
}