namespace WotWeEat.Domain.Enum;

public enum MealRating
{
    Excellent = 0,
    Good = 1,
    Average = 2,
    Poor = 3
}