namespace WotWeEat.Domain.Enum;

public enum MeatFishType
{
    Meat,
    Fish
}