@startuml MealPlanningClassDiagram

enum MealBase {
    Potato
    Pasta
    Dough
    Rice
    Other
}

enum MeatFishType {
    Meat
    Fish
}

enum MealRating {
    Excellent
    Good
    Average
    Poor
}

enum ReasonNotChosen {
    NotToday
    TooMuchWork
    TooUnhealthy
    Other
}

enum AmountOfWork {
    PieceOfCake
    Average
    LotOfWork
}

enum Healthy {
    Healthy
    Average
    Unhealthy
}

enum Season {
    Winter
    Spring
    Summer
    Autumn
}

class MealOption {
  + ReferenceId: Guid
  + Description: String
  + MealBase: MealBase
  + SuitableForChildren: Boolean
  + AmountOfWork: AmountOfWork
  + Healthy: Healthy
}

class Vegetable {
  + ReferenceId: Guid
  + Name: String
}

class MeatFish {
  + ReferenceId: Guid
  + Name: String
  + Type: MeatFishType
}

class MealVariation {
  + ReferenceId: Guid
  + Description: String
  + MakeSuitableForKids: bool
}

class Meal {
  + ReferenceId: Guid
  + Date: Date
  + Rating: MealRating
  + WithChildren: Boolean
}

class MealSuggestion {
  + ReferenceId: Guid
  + Option: MealOption
  + ResultedInMeal: Meal
  + DateSuggested: Date
  + Choice: Boolean
  + ReasonNotChosen: ReasonNotChosen
}

Meal --> "1" MealOption : Option
Meal --> "0..1" MealVariation : Variation
MealOption --> "0..8" MeatFish : MeatFishes
MealOption --> "0..*" MealVariation : PossibleVariations
MealOption --> "0..*" Vegetable : Vegetables
MealOption --> "0..*" Season : InSeasons
MealSuggestion --> "1" MealOption : Option
MealSuggestion --> "0..1" Meal : ResultedInMeal

@enduml
